--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,49 @@
 <%- include('includes/head') %>
+<%- include('includes/nav') %>
 
-    <section class="container">
-        <form action="/" method="post">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- Token de segurança de formulário -->
-            <h1> <%- titulo %> </h1> <!-- Exemplo de variável predefinida no HomeController -->
-            <label>Cliente</label>
-            <input type="text" name="cliente">
-            <button>Submit</button>
-        </form>
-    </section>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-2"></div>
 
-<%- include('includes/footer') %>
+        <div class="col-lg-8 my-3">
+            <h1 class="text-center">Agenda</h1>
+            <p class="text-center lead">Seus contatos estão abaixo</p>
+
+            <div class="row">
+                <div class="col my-3">
+                    <div class="alert alert-danger">Um erro qualquer</div>
+                </div>
+            </div>
+
+            <div class="responsive-table">
+                <table class="table my-3">
+                    <tr>
+                        <td>Nome</td>
+                        <td>Sobrenome</td>
+                        <td>(00) 0000-0000</td>
+                        <td>usuario@email.com</td>
+                    </tr>
+
+                    <tr>
+                        <td>Nome</td>
+                        <td>Sobrenome</td>
+                        <td>(00) 0000-0000</td>
+                        <td>usuario@email.com</td>
+                    </tr>
+
+                    <tr>
+                        <td>Nome</td>
+                        <td>Sobrenome</td>
+                        <td>(00) 0000-0000</td>
+                        <td>usuario@email.com</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+
+</div>
+
+<%- include('includes/footer')%>    
