--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,6 +9,8 @@
             <h1 class="text-center">Criar conta ou Entrar</h1>
             <p class="text-center lead">Faça o login ou crie sua conta abaixo</p>
 
+            <%- include('includes/messages'); %> 
+
             <div class="row mt-5">
 
                 <div class="col-lg mt-4">
