feat: Adicionado login de sessão, validações de usuário, página de recepção de usuário e mensagens de status de login para o usuário.

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -37,7 +37,7 @@
                     <h4>Faça seu login</h4>
                     <p>Se você já tem uma conta, faça login abaixo:</p>
 
-                    <form class= "mt-5" action="/login/register" method="post">
+                    <form class= "mt-5" action="/login/login" method="post">
                         <input type="hidden" name="_csrf" value=<%= csrfToken %>>
                         <div class="form-group my-4">
                           <label>Seu e-mail</label>
@@ -54,8 +54,6 @@
                 </div>
 
             </div>
-
-
 
         </div>
         <div class="col-lg-2"></div>
