--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -12,27 +12,27 @@
             <%- include('includes/messages')  %> 
 
             <% if(contato._id) { %> 
-            <form class= "mt-5" action="/contato/edit/<%= contato._id %> " method="POST">
+            <form class= "mt-5 form-contato" action="/contato/edit/<%= contato._id %> " method="POST">
             <% } else{ %> 
-            <form class= "mt-5" action="/contato/register" method="POST">
+            <form class= "mt-5 form-contato" action="/contato/register" method="POST">
             <% } %> 
                 <input type="hidden" name="_csrf" value=<%= csrfToken %>>
 
-                <div class="form-group my-4">
+                <div class="form-group form-input-nome my-4">
                   <label>Nome</label>
-                  <input value="<%= contato.nome %>" type="text" class="form-control" name="nome">
+                  <input value="<%= contato.nome %>" type="text" class="form-control input-nome" name="nome">
                 </div>
-                <div class="form-group my-4">
+                <div class="form-group form-input-sobrenome my-4">
                     <label>Sobrenome</label>
-                    <input value="<%= contato.sobrenome %>" type="text" class="form-control" name="sobrenome">
+                    <input value="<%= contato.sobrenome %>" type="text" class="form-control input-sobrenome" name="sobrenome">
                 </div>
-                <div class="form-group my-4">
+                <div class="form-group form-input-email my-4">
                     <label>Email</label>
-                    <input value="<%= contato.email %>" type="email" class="form-control" name="email">
+                    <input value="<%= contato.email %>" type="email" class="form-control input-email" name="email">
                 </div>
-                <div class="form-group my-4">
+                <div class="form-group form-input-telefone my-4">
                     <label>Telefone</label>
-                    <input value="<%= contato.telefone %>" type="tel" class="form-control" name="telefone">
+                    <input value="<%= contato.telefone %>" type="tel" class="form-control input-telefone" name="telefone">
                 </div>
               
                 <% if(contato._id) { %> 
